# Trading-Repo

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MIGRATION.md  MODERNIZATION.md  README.md  README_NEW.md  README_OLD.md  TRANSFORMATION_COMPLETE.md  UPDATE_COMPLETE.md  UPGRADE_BASELINE.md  UPGRADE_SUMMARY.md  docker-compose.full-stack.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  python-tests.yml
data/: AAPL_2020-01-01_to_2025-10-27_1d.csv
data-management/: README.md
data-management/database/: docker-compose.yml  schema.sql
data-management/ingestion/providers/: base_provider.py  yfinance_provider.py
data-management/storage/: timescale_handler.py
data_management/: __init__.py
data_management/ingestion/: __init__.py  scheduler.py
data_management/ingestion/providers/: __init__.py  base_provider.py  yfinance_provider.py
data_management/storage/: __init__.py  timescale_handler.py
docs/: GETTING_STARTED.md  README.md
docs/api-reference/: libraries.md
docs/getting-started/: motivewave.md  pine-script.md  python-analysis.md
docs/upgrade/2026-q1/: baseline-inventory.md
motivewave-indicators/: README.md
motivewave-indicators/studies/: TemplateStudy.java
ninjatrader-indicators/: README.md
pine-script-indicators/: README.md
pine-script-indicators/basic/: macd-indicator.pine  rsi-indicator.pine
pine-script-indicators/strategies/: ma-crossover-strategy.pine
pine-script-indicators/utilities/: template-indicator.pine
python-algorithms/: README.md  requirements.txt
python-algorithms/backtesting/: example_ma_crossover.py  vectorbt_engine.py
python-algorithms/config/: symbols.json
python-algorithms/notebooks/: trading_data_analysis.ipynb
python-algorithms/utils/: fetch_data.py
python_algorithms/: __init__.py
python_algorithms/backtesting/: __init__.py  example_ma_crossover.py  vectorbt_engine.py
python_algorithms/execution/: __init__.py  live_trading.py
python_algorithms/utils/: __init__.py  fetch_data.py
sierra-chart-indicators/: README.md
sierra-chart-indicators/templates/: basic_indicator.cpp
tests/backtests/: test_all_strategies.py
tests/integration/: test_data_pipeline.py
tests/unit/: test_data_management.py  test_python_algorithms.py
trading-tools/: README.md
trading-tools/analysis/: simple_analysis.py
trading-tools/visualization/: plot_candles.py
trading_repo/: __init__.py  cli.py
trading_tools/: __init__.py
trading_tools/analysis/: __init__.py  simple_analysis.py
trading_tools/visualization/: __init__.py  plot_candles.py
