[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-repo"
version = "0.1.0"
description = "Comprehensive trading development platform with multi-platform support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Nick Sloggett", email = "nick.sloggett@gmail.com"}
]
maintainers = [
    {name = "Nick Sloggett", email = "nick.sloggett@gmail.com"}
]
keywords = ["trading", "finance", "backtesting", "quantitative", "algorithmic-trading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    # Core Data Science Libraries
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.26.0,<2.0.0",
    "scipy>=1.14.0,<1.15.0",

    # Data Providers
    "yfinance>=0.2.50",
    "alpaca-py>=1.0.0",  # Updated from alpaca-trade-api
    "polygon-api-client>=2.0.0",
    "python-binance>=1.0.19",
    "ccxt>=4.5.0",

    # Database and Storage
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.30",
    "redis>=5.1.0",
    "pyarrow>=17.0.0",
    "fastparquet>=2024.11.0",

    # Backtesting and Analysis
    "backtrader>=1.9.78",
    "vectorbt>=0.30.2",
    "zipline-reloaded>=2.5.0",
    "bt>=0.2.9",
    "quantstats>=0.0.63",

    # Technical Analysis
    "ta>=0.11.0",
    "ta-lib>=0.4.29",  # May require system library installation
    "pandas-ta>=0.3.14b0",
    "tulipy>=0.4.0",

    # Visualization
    "matplotlib>=3.9.0",
    "seaborn>=0.13.2",
    "plotly>=5.24.0",
    "bokeh>=3.5.0",
    "mplfinance>=0.12.10",

    # API and Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "websockets>=12.0",

    # Utilities
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "click>=8.1.8",
    "tqdm>=4.67.0",
    "joblib>=1.4.0",
    "numba>=0.59.0",

    # Jupyter and Notebooks
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.0",
    "ipywidgets>=8.1.3",
    "notebook>=7.2.0",

    # Monitoring and Logging
    "prometheus-client>=0.21.0",
    "python-json-logger>=2.0.7",
    "coloredlogs>=15.0.1",

    # Portfolio Optimization
    "cvxpy>=1.5.0",
    "pyportfolioopt>=1.5.5",

    # Statistical Analysis
    "statsmodels>=0.14.2",
    "arch>=6.4.0",

    # Other Trading Tools
    "ib-insync>=0.9.86",  # Interactive Brokers
    "py_vollib>=1.0.1",  # Options pricing
    "requests>=2.32.0",
    "aiohttp>=3.10.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-xdist>=3.6.0",
    "pytest-mock>=3.14.0",
    "hypothesis>=6.122.0",

    # Code Quality
    "black>=24.10.0",
    "flake8>=7.1.0",
    "mypy>=1.14.0",
    "isort>=5.13.0",
    "pylint>=3.3.0",
    "ruff>=0.9.0",

    # Security
    "bandit>=1.8.0",
    "safety>=3.2.0",

    # Documentation
    "sphinx>=8.0.0",
    "sphinx-rtd-theme>=2.1.0",
    "sphinx-autodoc-typehints>=1.28.0",

    # Additional development tools
    "pre-commit>=4.0.0",
    "commitizen>=4.1.0",
]

ml = [
    # Machine Learning (separate environment recommended)
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "lightgbm>=4.5.0",
    "tensorflow>=2.17.0",
    "torch>=2.4.0",
]

docs = [
    "sphinx>=8.0.0",
    "sphinx-rtd-theme>=2.1.0",
    "sphinx-autodoc-typehints>=1.28.0",
]

[project.urls]
Homepage = "https://github.com/NickSloggett/Trading-Repo"
Repository = "https://github.com/NickSloggett/Trading-Repo"
Documentation = "https://github.com/NickSloggett/Trading-Repo#readme"
Issues = "https://github.com/NickSloggett/Trading-Repo/issues"
Changelog = "https://github.com/NickSloggett/Trading-Repo/blob/main/CHANGELOG.md"

[project.scripts]
trading-repo = "trading_repo.cli:cli"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*", "scripts*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
  | \.pytest_cache
  | \.vscode
)/
'''

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "vectorbt.*",
    "ta.*",
    "talib.*",
    "plotly.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["trading_repo", "python_algorithms", "data_management", "trading_tools"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/.pytest_cache/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\bProtocol\):",
    "@(abc\.)?abstractmethod",
]

# Isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["trading_repo"]
known_third_party = [
    "pandas",
    "numpy",
    "scipy",
    "matplotlib",
    "seaborn",
    "plotly",
    "sklearn",
    "tensorflow",
    "torch",
]
